[package]
name = "blackjack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pancurses = "0.17.0"
rand = "0.8.3"
mimalloc = { version = "*", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
debug = 0